test/files/neg/interop_typetags_arenot_manifests.scala
import scala.reflect.runtime.universe._

object Test extends App {
  def typeTagIsnotManifest[T: TypeTag] = {
    println(manifest[T])
  }

  typeTagIsnotManifest[Int]
  typeTagIsnotManifest[String]
  typeTagIsnotManifest[Array[Int]]
}